--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^8.3.1",
     "vue": "^2.6.11",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.4.0",
+    "ws": "^7.4.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
